swagger bug fixes
